--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodejs-typescript-template",
+  "name": "strict-flags",
   "version": "1.0.0",
-  "description": "TODO",
+  "description": "A NodeJS flags library which strictly enforces flag presence and alerts on unexpected flags.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
