--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "tsc",
     "test": "ts-node node_modules/jasmine/bin/jasmine",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "manualtest": "ts-node manualtest/fake_cli"
   },
   "author": "Ava Mattie",
   "license": "ISC",
@@ -19,5 +20,8 @@
     "jasmine": "^4.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "cli-table3": "^0.6.3"
   }
 }
