--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "strict-args",
   "version": "0.1.0",
-  "description": "A NodeJS arguments library which strictly enforces flag presence, and alerts on unexpected flags, and manages help and command outputs.",
+  "description": "A NodeJS arguments library which strictly enforces flag presence, command syntax, alerts on unexpected flags, and manages help and command outputs.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
